community単体、結合テスト実施

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -16,7 +16,9 @@ ja:
       genre_id: ジャンル
       price_id: 価格帯
      comment:
-      comment: コメント 
+      comment: コメント
+     community:
+      name: 名前 
  time:
     formats:
       default: "%Y/%m/%d %H:%M:%S"
