--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -18,7 +18,9 @@ ja:
      comment:
       comment: コメント
      community:
-      name: 名前 
+      name: 名前
+     message:
+      message: メッセージ 
  time:
     formats:
       default: "%Y/%m/%d %H:%M:%S"
