--- a/config/locales/active_storage.ja.yml
+++ b/config/locales/active_storage.ja.yml
@@ -1,6 +1,8 @@
 ja:
   activerecord:
     attributes:
+      profile:
+        profile_image: 画像
       store:
         store_images: 画像
       comment:
